assets/css/home.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
    caret-color: transparent
}

:root {
    --main-color: #071157;
    --light-color: white;
    --dark-color: black;
    --accent-color: #DD8D14;
}

body {
    background-color: var(--accent-color);
    width: 100%;
    height: 100vh;
}

a {
    text-decoration: none;
}

ul li {
    list-style: none;
}

h1,
h2 {
    color: var(--main-color);
}

.hide {
    display: none;
}

/* Animations */
@keyframes moveright {
    0% {
        transform: translateX(0);
    }

    50% {
        transform: translateX(5px);
    }
    100% {
        transform: translateX(0);
    }
}

@keyframes movefromleft {
    0% {
        transform: translateX(-120%);
    }

    100% {
        transform: translateX(0);
    }
}

/* Homepage */

#homepage {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 90%;
    margin: 1rem auto;
}

.homepage_content__title {
    text-align: center;
    padding: 1rem 1rem;
}

.homepage_content__title span {
    color: var(--light-color);
}

.homepage_content__text {
    text-align: center;
}

.homepage_content__text span {
    color: var(--main-color);
    font-weight: 600;
    font-style: italic;
}

.buttons {
    width: 22rem;
    padding: 2rem 0;
    display: flex;
    justify-content: space-between;
    gap: 1rem;
}

.btn {
    padding: .2rem .8rem;
    background-color: var(--main-color);
    border: 3px solid var(--light-color);
    border-radius: .5rem;
    color: var(--accent-color);
    font-size: 1.2rem;
    font-weight: 600;
    cursor: pointer;
}

.btn:hover,
.btn:active {
    background-color: var(--accent-color);
    border: 3px solid var(--main-color);
    color: var(--main-color);
    cursor: pointer;
}

.getStartedBtn {
    width: 22rem;
    padding: .4rem .6rem;
    background-color: var(--accent-color);
    border: 3px solid var(--light-color);
    border-radius: .5rem;
    color: var(--light-color);
    font-size: 1.2rem;
    font-weight: 600;
    cursor: pointer;
}

.getStartedBtn:hover,
.getStartedBtn:focus {
    border: 3px solid var(--main-color);
    color: var(--main-color);
    cursor: pointer;
}

.get-started a i {
    animation: moveright 2s ease-in-out infinite;
}

.modal {
    display: none;
    /* Hidden by default */
    position: fixed;
    /* Stay in place */
    z-index: 1;
    /* Sit on top */
    left: 0;
    top: 0;
    width: 100%;
    /* Full width */
    height: 100%;
    /* Full height */
    overflow: auto;
    /* Enable scroll if needed */
    background-color: rgb(0, 0, 0);
    /* Fallback color */
    background-color: rgba(0, 0, 0, 0.733);
    /* Black w/ opacity */
}

.modal-content {
    text-align: center;
    color: var(--light-color);
    background-color: var(--main-color);
    margin: 15% auto;
    /* 15% from the top and centered */
    padding: 1.5rem;
    border: 3px solid var(--accent-color);
    border-radius: 1rem;
    width: 80%;
    /* Could be more or less, depending on screen size */
}

.modal-content-title {
    color: var(--accent-color);
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

.modal-content-list {
    text-align: center;
    list-style-position: inside;
    margin-bottom: 1rem;
    font-weight: 600;
}

.modal-content-list li {
    padding: .5rem 0;
}

.modal-content-text {
    color: var(--accent-color);
    font-weight: 600;
    font-style: italic;
}

/* The Close Button */
.close {
    color: var(--accent-color);
    font-size: 2rem;
    font-weight: 600;
}

.close:hover,
.close:focus {
    scale: 1.25;
    cursor: pointer;
}

/* Footer */
footer {
    width: 100%;
    height: 7rem;
    position: fixed;
    bottom: 0;
    background-color: var(--main-color);
    display: flex;
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    justify-content: center;
    color: var(--light-color);
}

.social-networks {
    display: flex;
    gap: 3rem;
}

.social-networks i {
    font-size: 1.5rem;
    color: var(--light-color);
    border: 2px solid var(--light-color);
    width: 45px;
    height: 45px;
    border-radius: 50%;
    text-align: center;
    line-height: 45px;
}

.social-networks i:hover,
.social-networks i:focus {
    color: var(--accent-color);
    border: 2px solid var(--accent-color);
}

.devloped-text {
    font-size: 1.2rem;
}

.devloped-text i {
    font-size: 1.5rem;
    color: var(--light-color);
}

.devloped-text i:hover,
.devloped-text i:focus {
    color: var(--accent-color);
}


/* End */

#finalTextContainer {
    margin-top: 1rem;
    background-color: var(--main-color);
    border: 3px solid var(--light-color);
    padding: 1rem;
    border-radius: .5rem;
}

#final-text {
    color: var(--accent-color);
    font-size: 1.5rem;
}

#final-text strong {
    color: var(--light-color);
}

#final-quote {
    margin-top: 1rem;
    color: var(--light-color);
    font-style: italic;
}

#end {
    width: 90%;
    margin: 2rem auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

#username {
    width: 100%;
}

#saveScoreBtn {
    width: 100%;
}

#end-form {
    width: 100%;
}

#end-form input {
    border: 5px solid var(--main-color);
    border-radius: .5rem;
    font-size: 1.5rem;
    background-color: var(--accent-color);
    margin: 1rem auto;
    padding: .3rem .8rem;
    color: var(--light-color);
}

#end-form input:focus {
    outline: none;
}

#username-text {
    width: 90%;
    font-size: small;
    font-weight: 600;
    margin: 0 auto 1rem auto;
    font-style: italic;
    color: var(--light-color);
}

#control-buttons {
    width: 90%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#control-buttons a {
    width: 46%;
    text-align: center;
}

/* Highscores */

#highScores {
    width: 90%;
    margin: 3rem auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#highScoresList {
    background-color: var(--main-color);
    padding: 1.5rem;
    width: 100%;
    min-height: 30vh;
    margin: 1rem auto;
    border: 3px solid var(--light-color);
    border-radius: 1rem;
}

.high-score {
    font-size: 1.5rem;
    color: var(--accent-color);
    text-align: center;
}

#highScores a.btn {
    width: 100%;
    text-align: center;
    margin-bottom: 1rem;
}

#clearBtn {
    width: 100%;
}








@media (min-width: 1200px) {
    .modal-content {
        text-align: center;
        color: var(--light-color);
        background-color: var(--main-color);
        margin: 15% auto;
        /* 15% from the top and centered */
        padding: 1.5rem;
        border: 3px solid var(--accent-color);
        border-radius: 1rem;
        width: 50%;
        /* Could be more or less, depending on screen size */
    }

    .modal-content-title {
        color: var(--accent-color);
        font-size: 2rem;
        margin-bottom: 1rem;
    }

}

